added darkmode in global css

--- a/web/src/global.sass
+++ b/web/src/global.sass
@@ -2,5 +2,5 @@
 @tailwind components
 @tailwind utilities
 
-body 
-    @apply bg-[#09090A] text-zinc-100
+body
+    @apply bg-white text-zinc-800 dark:bg-[#09090A] dark:text-zinc-100 transition-all
